# zov

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/zir/: Cargo.toml
crates/zir-codegen/: Cargo.toml
crates/zir-codegen-cranelift/: Cargo.toml
crates/zir-codegen-cranelift/examples/: jit_execution.rs
crates/zir-codegen-cranelift/src/: analyze.rs  context.rs  lib.rs  place.rs  value.rs
crates/zir-codegen-cranelift/src/snapshots/: zir_codegen_cranelift__tests__clif_add_function.snap  zir_codegen_cranelift__tests__clif_const_42.snap  zir_codegen_cranelift__tests__clif_const_negative.snap  zir_codegen_cranelift__tests__clif_max_function.snap
crates/zir-codegen-cranelift/tests/: clif_codegen.rs
crates/zir-codegen-cranelift/tests/snapshots/: clif_codegen__clif_add_function.snap  clif_codegen__clif_const_42.snap  clif_codegen__clif_const_negative.snap  clif_codegen__clif_max_function.snap
crates/zir-codegen-llvm/: Cargo.toml
crates/zir-codegen-llvm/src/: lib.rs  llvm.rs
crates/zir-codegen/src/: lib.rs  place.rs  testing.rs  value.rs
crates/zir-codegen/tests/: backend_agnostic.rs
crates/zir/examples/: simple_function.rs
crates/zir/src/: arena.rs  idx.rs  intern.rs  lib.rs  list.rs  query.rs  tests.rs
crates/zir/src/mir/: mod.rs  pretty.rs  syntax.rs  visit.rs
crates/zir/src/snapshots/: zir__tests__snapshot_tests__snapshot_conditional_max_function.snap  zir__tests__snapshot_tests__snapshot_empty_body.snap  zir__tests__snapshot_tests__snapshot_simple_add_function.snap
crates/zir/src/ty/: mod.rs  scalar.rs
crates/zov-driver/: Cargo.toml
crates/zov-driver/examples/: simple_function.rs
crates/zov-driver/src/: lib.rs  main.rs
zir/: Cargo.toml
zir/examples/: fibonacci.rs
zir/src/: idx.rs  lib.rs  mir.rs  module.rs  scalar.rs  ty.rs
zir/tests/: integration.rs
