[workspace]
resolver = "2"
members = [
    "crates/zir",
    "crates/zir-codegen",
    "crates/zir-codegen-cranelift",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zov-lang/zov"

[workspace.dependencies]
# Arena and indexing
index_vec = "0.1"
typed-arena = "2.0"

# Arbitrary precision integers
num-bigint = "0.4"
num-traits = "0.2"

# Incremental compilation
salsa = "0.24.0"

# Utilities
hashbrown = "0.16"
smallvec = { version = "1.13", features = ["union"] }
rustc-hash = "2.1"
bitflags = "2.6"
parking_lot = "0.12"

# Testing
insta = { version = "1.42", features = ["glob"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
