[package]
name = "zir"
description = "Universal MIR library for ZoV language - context-free, arena-based, serializable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
index_vec.workspace = true
smallvec.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
