[package]
name = "zir-codegen-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift code generation backend for ZIR"

[dependencies]
zir = { path = "../zir" }

# Code generation
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
target-lexicon = "0.13"

index_vec = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
