[package]
name = "zir-codegen-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift code generation backend for ZIR"

[dependencies]
zir = { path = "../zir" }

# Code generation
cranelift = "0.126"
cranelift-module = "0.126"
cranelift-jit = "0.126"
cranelift-object = "0.126"
cranelift-native = "0.126"
cranelift-codegen = "0.126"
cranelift-frontend = "0.126"
target-lexicon = "0.13"

index_vec = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
