[package]
name = "zir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal MIR library for the ZoV programming language"

[dependencies]
index_vec = { workspace = true }
typed-arena = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
