[package]
name = "zov-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Driver for the ZoV compiler"

[[bin]]
name = "zov"
path = "src/main.rs"

[dependencies]
zir = { path = "../zir" }
zir-codegen = { path = "../zir-codegen" }
index_vec = { workspace = true }

[[example]]
name = "simple_function"
path = "examples/simple_function.rs"
